--- a/lawsystem/templates/test.html
+++ b/lawsystem/templates/test.html
@@ -94,8 +94,11 @@
               <div class="container">
                         <div class="card-body tab-content">
                             <div class="tab-pane active" id="profile">
+                              <button class="close" data-dismiss="modal">&times</button>
                               <div style="font-size: 22px;" >
+          
                                 <center ><p><b>Need Suggestion for Hiring an Advocate ?</b></p></center>
+                                
                                 </div>
                             <p class="text-dark text-centre" style="font-size: 12px;">We will filter up and provide potential advocate list. How about you fill this form and make it easier for us?</p>
                             <form style="font-size: 12px;">  
