--- a/lawsystem/templates/clientHome.html
+++ b/lawsystem/templates/clientHome.html
@@ -17,9 +17,10 @@
   color:#fff;
   margin-right: 20px;
 }
+
 </style>
 <body>
-{% include  'test.html' %}
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand">way2CMS</a> 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +39,7 @@
                 <a class="nav-link" href="/caseStatus/">Check Status</a>
               </li> 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" style="overflow:visible;" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i  class="fa fa-user" aria-hidden="true"></i>  My Account
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -114,6 +115,7 @@
               </div>
           </div>
       </div>
-
+      
+      
 </body>
 </html>
