--- a/lawsystem/templates/hiresuggestions.html
+++ b/lawsystem/templates/hiresuggestions.html
@@ -64,8 +64,10 @@
             <div class="card">
                 <div class="card-body tab-content">
                     <div class="tab-pane active" id="profile">
-                    <p class="text-dark text-centre">We will filter up and provide potential advocate list. How about you fill this form and make it easier for us?</p>
-                    <form>
+                    <p class="text-dark text-centre">We will filter up and provide potential advocate list. How about you fill 
+                      this form and make it easier for us?</p>
+
+                    <form action="" style="border:1px solid #ccc" method="POST">
                     <div class="form-group">
                       <label for="uname">User Name</label>
                       <input type="text" class="form-control" id="uname" placeholder="Enter your User name" value="">
