--- a/lawsystem/templates/clientRegister.html
+++ b/lawsystem/templates/clientRegister.html
@@ -8,7 +8,7 @@
         <script class="lazy" data-src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script class="lazy" data-src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script class="lazy" data-src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         {% for message in messages %}
         <br>
         <div class="container-fluid p-0"  >
@@ -21,6 +21,42 @@
         {% endfor %}
 <title>Client Registration Form</title>
 <link rel="stylesheet" href="{% static 'styles/clientRegister_style.css' %}">
+<style>
+  
+#id_password  
+  {
+   width:90%; 
+   height: 45px; 
+   border-radius: 5px;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+  
+  #id_password:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+  #id_password2  
+  {
+   width:85%; 
+   height: 45px; 
+   border-radius: 5px;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+  
+  #id_password2:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+  
+</style>
 </head>
 <body>
 
@@ -59,10 +95,36 @@
     <input type="text"   name="username" required>
 <br>
     <label for="password"><b>Password*</b></label>
-    <input type="password"   name="password" required>
-<br>
+    <input type="password"   name="password" required id="id_password">
+    <i class="far fa-eye" id="togglePassword" style="margin-left: -40px; cursor: pointer;"></i>
+        <script>
+            const togglePassword = document.querySelector('#togglePassword');
+    const password= document.querySelector('#id_password');
+    
+    togglePassword.addEventListener('click', function (e) {
+    // toggle the type attribute
+    const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+    password.setAttribute('type', type);
+    // toggle the eye slash icon
+    this.classList.toggle('fa-eye-slash');
+    });
+        </script>
+<br><br>
     <label for="re_password"><b>Confirm Password*</b></label>
-    <input   type="password"   name="re_password" required>
+    <input   type="password"   name="re_password" required id="id_password2" >
+    <i class="far fa-eye" id="togglePassword2" style="margin-left: -40px; cursor: pointer;"></i>
+        <script>
+            const togglePassword2 = document.querySelector('#togglePassword2');
+    const password2= document.querySelector('#id_password2');
+    
+    togglePassword2.addEventListener('click', function (e) {
+    // toggle the type attribute
+    const type2 = password2.getAttribute('type') === 'password' ? 'text' : 'password';
+    password2.setAttribute('type', type2);
+    // toggle the eye slash icon
+    this.classList.toggle('fa-eye-slash');
+    });
+        </script>
 <br>
     
 
